--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <hr>
             </div>
             <div class="col-12">
-                <p class="lead">Overwatch is a team-based multiplayer first-person shooter developed and published by Blizzard-Entertainment. Described as a "hero shooter".</p>
+                <p class="lead">Overwatch is a team-based multiplayer first-person shooter developed and published by Blizzard-Entertainment. Described as a "hero shooter".Overwatch assigns players into two teams of six, with each player selecting from a roster of over 30 characters, known as "heroes," each with a unique style of play that is divided into three general roles that fit their purpose.</p>
             </div>
         </div>
     </div>
@@ -113,23 +113,17 @@
     </div>
 <footer>
     <div class="container-fluid padding">
-        <div class="row text-center">
             <div class="col-md-12">
-                <hr class="light">
                 <p><b>Autors:</b> Mareks Sinica-Sinavskis</p>
-                <hr class="light">
             </div>
             <div class="col-md-12">
                 <p><b>e-pasts:</b> Overwatch@gmail.com</p>
-                <hr class="light">
             </div>
             <div class="col-md-12">
                 <p><b>Instagram:</b> @Overwatch</p>
-                <hr class="light">
             </div>
             <div class="col-md-12">
                 <p><b>Telefona numurs:</b> +371 26420534</p>
-                <hr class="light">
             </div>
         </div>
     </div>
